src/objects/Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <label>Accounting Period</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinic Budget</label>
        <referenceTo>Clinic_Budget__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevId__c</fullName>
        <label>Rev Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Schedule</label>
        <referenceTo>Revenue_Schedule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Product__c</fullName>
        <label>Salesforce Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Period__c</columns>
        <columns>Product__c</columns>
        <columns>Salesforce_Product__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Budget__c</columns>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>